--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
   "name": "left-4-dead-office-rpg",
   "version": "1.0.0",
-  "description": "",
+  "description": "* HTML\r * CSS\r * JavaScript",
   "main": "index.js",
-  "directories": {
-    "test": "tests"
-  },
   "scripts": {
     "build": "webpack --mode development",
     "start": "npm run build && webpack-dev-server --open --mode development",
     "lint": "eslint src/*.js",
-    "test": "jest"
+    "test": "jest --coverage"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": ["html"]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "dotenv-webpack": "^2.0.0",
     "eslint": "^6.3.0",
     "eslint-loader": "^3.0.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "style-loader": "^1.0.0",
