--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "left-4-dead-office-rpg",
+  "name": "paperpusherrpg",
   "version": "1.0.0",
   "description": "* HTML\r * CSS\r * JavaScript",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
-    "start": "npm run build ; webpack-dev-server --open --mode development",
+    "start": "npm run build && webpack-dev-server --open --mode development",
     "lint": "eslint src/*.js",
     "test": "jest --coverage"
   },
   "jest": {
     "collectCoverage": true,
-    "coverageReporters": ["html"]
+    "coverageReporters": [
+      "html"
+    ]
   },
   "keywords": [],
   "author": "",
